# python-tool

./: MANIFEST.in  README.md  build_commands.py  com.cronocide.python-tool.plist  config.yml  git-readme.md  new_python_tool.sh  pyproject.toml  python-tool.service  setup-service.sh  setup.py  setup.sh
.github/: README.md
